// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`.updateArtifacts() catches errors 1`] = `
Array [
  Object {
    "artifactError": Object {
      "lockFile": "composer.lock",
      "stderr": "not found",
    },
  },
]
`;

exports[`.updateArtifacts() catches unmet requirements errors 1`] = `
Array [
  Object {
    "artifactError": Object {
      "lockFile": "composer.lock",
      "stderr": "fooYour requirements could not be resolved to an installable set of packages.bar",
    },
  },
]
`;
